--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -9,6 +9,11 @@ font-size: 60px;
 margin-bottom: 20px;
 color: purple;
 }
+.contact textarea{
+    width: 428px;
+    padding: 10px;
+    border-radius: 10px;
+}
 .contact-number{
     width: 428px;
     padding: 10px;
@@ -41,6 +46,9 @@ color: purple;
     }
     .contact-number{
         margin: -8px auto;
+        width: 70%;
+    }
+    .contact textarea{
         width: 70%;
     }
 }
